src/styles/components/navbar.scss
/* === NAVBAR: MENU BUTTON === */
.navbar-menu-button {
	border: none;
	background: none;

	cursor: pointer;

	&.enabled > div.navbar-menu-button-bar {
		&:nth-of-type(1) {
			transform: translateY(10px) rotate(45deg);
		}
		&:nth-of-type(2) {
			opacity: 0;
		}
		&:nth-of-type(3) {
			transform: translateY(-10px) rotate(-45deg);
		}
	}
}

.navbar-menu-button-bar {
	height: 4px;
	width: 35px;
	display: block;
	margin: 6px auto;
	border-radius: 5px;
	position: relative;
	background-color: $white;

	transition: all 0.5s ease;
}

/* === NAVBAR: MENU ITEM === */
.navbar-container-wrapper {
	width: 100%;

	top: 20px;
	left: 50%;
	transform: translateX(-50%);

	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;

	position: fixed;
	z-index: 9999;
}

.navbar-container {
	background-color: $navbar-background;
	padding: 10px 20px;

	border-radius: 10px;
	width: 90%;
	height: 80px;

	display: flex;
	justify-content: space-between;
	align-items: center;
}

.navbar-content {
	display: flex;
	align-items: center;

	> img {
		width: 40px;
		margin-right: 10px;
	}
}

.navbar-dropdown {
	position: relative;
	height: 36px;
}

.navbar-dropdown-content {
	background-color: $comp-background2;
	filter: drop-shadow(5px 10px 10px rgba(0, 0, 0, 0.25));

	padding: 20px;
	border-radius: 10px;

	position: absolute;
	z-index: 9999;
	right: 0;

	display: flex;
	flex-direction: column;

	> .button {
		padding: 0px;
		font-weight: 400;

		display: flex;
		align-items: center;

		i {
			transition: color 0.3s ease;
			margin-right: 10px;
		}

		&:hover i,
		&:focus-visible i {
			outline: none;
			color: rgba($white, 0.5);
		}
	}
}

.navbar-dropdown-border {
	height: 2px;
	width: 100%;

	margin: 5px 0;
	background-color: rgba($white, 0.5);
}

/* === NAVBAR: UPLOAD MODAL === */
.upload-modal-content {
	padding: 20px 0;
	width: 100%;
}

.upload-modal-top {
	width: 100%;

	display: flex;
	justify-content: space-between;
	align-items: center;

	> .button {
		padding: 0px;
		font-weight: 400;

		display: flex;
		align-items: center;

		i {
			transition: color 0.3s ease;
			margin-right: 10px;
		}

		&:hover i,
		&:focus-visible i {
			outline: none;
			color: rgba($white, 0.5);
		}
	}
}

.upload-modal-title {
	font-weight: 500;
	font-size: 40px;
}

.upload-modal-dropzone {
	width: 100%;
	height: 250px;

	margin-top: 20px;

	border: 2px dashed rgba($white, 0.5);
	border-radius: 5px;

	display: grid;
	place-items: center;
}

.upload-modal-dropzone-content {
	display: grid;
	place-items: center;

	> i {
		font-size: 75px;
	}

	> p {
		margin-top: 15px;
		font-size: 25px;

		text-align: center;
	}
}

.upload-modal-upload {
	overflow-y: auto;

	&::-webkit-scrollbar {
		width: 10px;
	}

	/* Track */
	&::-webkit-scrollbar-track {
		background: #323436;
	}

	/* Handle */
	&::-webkit-scrollbar-thumb {
		background: $button-blurple;
	}

	/* Handle on hover */
	&::-webkit-scrollbar-thumb:hover {
		background: $button-blurple-active;
	}
}

.upload-modal-dropzone {
	width: calc(100% - 10px);
}

.upload-modal-uploaded-list {
	padding-right: 10px;
}

.upload-modal-uploaded-list {
	margin-top: 1rem;

	.upload-modal-uploaded-file:not(:first-child) {
		margin-top: 10px;
	}
}

.upload-modal-uploaded-file {
	min-width: 100%;
	overflow-x: auto;
}

.upload-modal-uploaded-file,
.uploaded-modal-uploaded-file-details,
.uploaded-modal-uploaded-file-title {
	width: 100%;
	margin-right: 10px;

	display: flex;
	align-items: center;
}

.uploaded-modal-uploaded-file-title {
	width: 100%;

	overflow: hidden;
	text-overflow: ellipsis;
	white-space: nowrap;
}

.upload-modal-uploaded-file {
	padding: 5px 10px;

	border-radius: 5px;
	background-color: #323436;

	> i {
		font-size: 45px;
		margin-right: 20px;

		color: $blurple;
	}

	> .button i {
		font-size: 30px;
		margin-right: 20px;

		color: $blurple;
	}

	> p {
		font-size: 20px;
		text-align: center;

		> i {
			font-size: 30px;
			color: $blurple;
		}
	}
}

.uploaded-modal-uploaded-file-details {
	flex-direction: column;
	align-items: unset;

	> p {
		max-width: fit-content;
	}
}

.uploaded-modal-uploaded-file-title {
	font-size: 20px;

	p#state {
		margin-left: 5px;
	}
}

.upload-modal-progressbar {
	width: calc(100% - 20px);
	height: 7.5px;

	margin: 7.5px 0;
	border-radius: 5px;

	background-color: $comp-background1;

	> div {
		max-width: 100%;
		height: 100%;

		border-radius: 5px;
		background-color: $blurple;
	}
}

